--- a/Jobify-Android-App/app/src/main/res/layout/fragment_applied.xml
+++ b/Jobify-Android-App/app/src/main/res/layout/fragment_applied.xml
@@ -79,8 +79,8 @@
                 android:paddingStart="12dp"
                 android:paddingEnd="4dp"
                 android:background="@drawable/circularbordersolid"
-                android:ems="10"
-                android:inputType="text"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:textSize="16dp"
                 android:hint="Search for your applied job"
                 android:textColorHint="@color/goodgrey"
@@ -111,6 +111,16 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_bold"
+            android:paddingStart="5dp"
+            android:text="Your Job Status"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@color/goodgrey"
+            />
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="250dp"
@@ -124,6 +134,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -210,11 +221,6 @@
                 />
 
         </LinearLayout>
-
-
-
-
-
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
