--- a/Jobify-Android-App/app/src/main/res/layout/activity_applied_job.xml
+++ b/Jobify-Android-App/app/src/main/res/layout/activity_applied_job.xml
@@ -10,39 +10,30 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primaryColor"
+
         android:fitsSystemWindows="true"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/searchbar">
 
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:elevation="10dp"
-            app:collapseIcon="@drawable/person"
-            app:layout_collapseMode="pin"
-            app:title=" ">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:text="Jobify"
-                android:textSize="24dp"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                app:layout_collapseMode="parallax" />
+            android:layout_height="?attr/actionBarSize"
+            app:title="All Applied Drive"
+            app:subtitle="Check status of your application"
+            app:subtitleTextColor="@color/white"
+            app:titleTextColor="@color/white"
+            app:navigationIcon="@drawable/icon_white_24"
+            >
 
 
-        </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.MaterialToolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
+
 
     <!-- Search Bar -->
     <!-- Search Bar -->
