--- a/Jobify-Android-App/app/src/main/res/values/themes.xml
+++ b/Jobify-Android-App/app/src/main/res/values/themes.xml
@@ -10,6 +10,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="windowNoTitle">true</item>
+
+        <item name="colorSurface">?attr/colorPrimary</item>
+        <item name="colorOnSurface">?attr/colorOnPrimary</item>
+        <item name="colorOnSurfaceVariant">?attr/colorPrimaryVariant</item>
         <!--<item name="android:windowFullscreen">true</item>-->
     </style>
 
